fix overflow issue

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,5 +12,8 @@
     .form {
       @apply flex flex-col justify-center items-center max-w-xl mx-auto py-5 bg-white
     }
+    .link {
+      @apply text-center font-bold text-amber-700 cursor-pointer
+    }
   }
   
